--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
    <h1>hola mundo</h1>
    <button class="generarPregunta" id="generarPregunta">Pregunta!</button>
+   <button class="boton50porciento" id="boton50porciento">50%</button>
    <h2 class="pregunta" id="tituloPregunta"></h2>
    <div class="respuestas" id="respuestas">
       <p class="respuesta" id="respuesta1"></p>
