feat: comodin del publico

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <h1>hola mundo</h1>
    <button class="generarPregunta" id="generarPregunta">Pregunta!</button>
    <button class="boton50porciento" id="boton50porciento">50%</button>
+   <button class="botonPublico" id="botonPublico">Publico</button>
    <h2 class="pregunta" id="tituloPregunta"></h2>
    <div class="respuestas" id="respuestas">
       <p class="respuesta" id="respuesta1"></p>
