--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
 </head>
 
 <body>
-   <h1>hola mundo</h1>
+   <h1>50x15</h1>
    <button class="generarPregunta" id="generarPregunta">Pregunta!</button>
    <button class="boton50porciento" id="boton50porciento">50%</button>
    <button class="botonPublico" id="botonPublico">Publico</button>
+   <button class="botonSaltar" id="botonSaltar">Saltar</button>
+   <h3 class="ronda" id="ronda"></h3>
+   <h3 class="puntuacion" id="puntuacion"></h3>
+
    <h2 class="pregunta" id="tituloPregunta"></h2>
    <div class="respuestas" id="respuestas">
       <p class="respuesta" id="respuesta1"></p>
       <p class="respuesta" id="respuesta2"></p>
       <p class="respuesta" id="respuesta3"></p>
       <p class="respuesta" id="respuesta4"></p>
+      <button class="confirmar" id="confirmar">confirmar</button>
 
    </div>
 
