--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
    <button class="botonSaltar" id="botonSaltar">Saltar</button>
    <h3 class="ronda" id="ronda"></h3>
    <h3 class="puntuacion" id="puntuacion"></h3>
+   <button class="plantarse" id="botonPlantarse" onclick="plantarse()">Plantarse</button>
+
 
    <h2 class="pregunta" id="tituloPregunta"></h2>
    <div class="respuestas" id="respuestas">
