--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <button class="botonSaltar" id="botonSaltar">Saltar</button>
    <h3 class="ronda" id="ronda"></h3>
    <h3 class="puntuacion" id="puntuacion"></h3>
-   <button class="plantarse" id="botonPlantarse" onclick="plantarse()">Plantarse</button>
+   <button class="plantarse" id="botonPlantarse">Plantarse</button>
 
 
    <h2 class="pregunta" id="tituloPregunta"></h2>
@@ -33,6 +33,6 @@
 
 </body>
 
-<script src="/main.js"></script>
+<script type="module" src="/main.js"></script>
 
 </html>
