--- a/index.html
+++ b/index.html
@@ -10,26 +10,55 @@
 
 <body>
    <h1>50x15</h1>
-   <button class="generarPregunta" id="generarPregunta">Pregunta!</button>
+   <button class="generarPregunta" id="generarPregunta">Empezar</button>
    <button class="boton50porciento" id="boton50porciento">50%</button>
    <button class="botonPublico" id="botonPublico">Publico</button>
    <button class="botonSaltar" id="botonSaltar">Saltar</button>
-   <h3 class="ronda" id="ronda"></h3>
+   <h3 class="rondaActual" id="rondaActual"></h3>
    <h3 class="puntuacion" id="puntuacion"></h3>
    <button class="plantarse" id="botonPlantarse">Plantarse</button>
 
 
-   <h2 class="pregunta" id="tituloPregunta"></h2>
-   <div class="respuestas" id="respuestas">
-      <p class="respuesta" id="respuesta1"></p>
-      <p class="respuesta" id="respuesta2"></p>
-      <p class="respuesta" id="respuesta3"></p>
-      <p class="respuesta" id="respuesta4"></p>
-      <button class="confirmar" id="confirmar">confirmar</button>
+   <div class="principal">
+      <div class="izquierda">
+         <h2 class="pregunta" id="tituloPregunta"></h2>
+         <div class="respuestas" id="respuestas">
+            <p class="respuesta" id="respuesta1"></p>
+            <p class="respuesta" id="respuesta2"></p>
+            <p class="respuesta" id="respuesta3"></p>
+            <p class="respuesta" id="respuesta4"></p>
+            <button class="confirmar" id="confirmar">confirmar</button>
+            <div class="solucion" id="solucion"></div>
+         </div>
+      </div>
+      <div class="derecha" id="derecha">
+         <div class="rondas" id="rondas">
+            <div class="ronda" id="ronda1"></div>
+            <div class="ronda" id="ronda2"></div>
+            <div class="ronda" id="ronda3"></div>
+            <div class="ronda" id="ronda4"></div>
+            <div class="ronda" id="ronda5"></div>
+            <div class="ronda" id="ronda6"></div>
+            <div class="ronda" id="ronda7"></div>
+            <div class="ronda" id="ronda8"></div>
+            <div class="ronda" id="ronda9"></div>
+            <div class="ronda" id="ronda10"></div>
+            <div class="ronda" id="ronda11"></div>
+            <div class="ronda" id="ronda12"></div>
+            <div class="ronda" id="ronda13"></div>
+            <div class="ronda" id="ronda14"></div>
+            <div class="ronda" id="ronda15"></div>
+         </div>
+      </div>
+
+
 
    </div>
 
-   <div class="solucion" id="solucion"></div>
+
+
+
+
 
 </body>
 
