feat: barra de tiempo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
             <button class="confirmar" id="confirmar">confirmar</button>
             <div class="solucion" id="solucion"></div>
          </div>
+         <div class="barra" id="barra">
+            <div class="solucionBola" id="solucionBola"></div>
+         </div>
       </div>
+
       <div class="derecha" id="derecha">
          <div class="rondas" id="rondas">
             <div class="ronda" id="ronda1"></div>
@@ -50,9 +54,6 @@
             <div class="ronda" id="ronda15"></div>
          </div>
       </div>
-
-
-
    </div>
 
 
