--- a/index.html
+++ b/index.html
@@ -9,52 +9,61 @@
 </head>
 
 <body>
-   <h1>50x15</h1>
+   <h1>¿Quien quiere ser millonario? <span class="pequeño"> Version Tech</span></h1>
    <button class="generarPregunta" id="generarPregunta">Empezar</button>
-   <button class="boton50porciento" id="boton50porciento">50%</button>
-   <button class="botonPublico" id="botonPublico">Publico</button>
-   <button class="botonSaltar" id="botonSaltar">Saltar</button>
-   <h3 class="rondaActual" id="rondaActual"></h3>
+
+
    <h3 class="puntuacion" id="puntuacion"></h3>
    <button class="plantarse" id="botonPlantarse">Plantarse</button>
 
+   <div class="solucion" id="solucion"></div>
+   <h3 class="rondaActual" id="rondaActual"></h3>
 
-   <div class="principal">
-      <div class="izquierda">
-         <h2 class="pregunta" id="tituloPregunta"></h2>
-         <div class="respuestas" id="respuestas">
-            <p class="respuesta" id="respuesta1"></p>
-            <p class="respuesta" id="respuesta2"></p>
-            <p class="respuesta" id="respuesta3"></p>
-            <p class="respuesta" id="respuesta4"></p>
-            <button class="confirmar" id="confirmar">confirmar</button>
-            <div class="solucion" id="solucion"></div>
-         </div>
-         <div class="barra" id="barra">
-            <div class="solucionBola" id="solucionBola"></div>
-         </div>
-      </div>
 
-      <div class="derecha" id="derecha">
-         <div class="rondas" id="rondas">
-            <div class="ronda" id="ronda1"></div>
-            <div class="ronda" id="ronda2"></div>
-            <div class="ronda" id="ronda3"></div>
-            <div class="ronda" id="ronda4"></div>
-            <div class="ronda" id="ronda5"></div>
-            <div class="ronda" id="ronda6"></div>
-            <div class="ronda" id="ronda7"></div>
-            <div class="ronda" id="ronda8"></div>
-            <div class="ronda" id="ronda9"></div>
-            <div class="ronda" id="ronda10"></div>
-            <div class="ronda" id="ronda11"></div>
-            <div class="ronda" id="ronda12"></div>
-            <div class="ronda" id="ronda13"></div>
-            <div class="ronda" id="ronda14"></div>
-            <div class="ronda" id="ronda15"></div>
-         </div>
+
+   <div class="derecha" id="derecha">
+      <div class="rondas" id="rondas">
+         <div class="ronda" id="ronda1"></div>
+         <div class="ronda" id="ronda2"></div>
+         <div class="ronda" id="ronda3"></div>
+         <div class="ronda" id="ronda4"></div>
+         <div class="ronda" id="ronda5"></div>
+         <div class="ronda" id="ronda6"></div>
+         <div class="ronda" id="ronda7"></div>
+         <div class="ronda" id="ronda8"></div>
+         <div class="ronda" id="ronda9"></div>
+         <div class="ronda" id="ronda10"></div>
+         <div class="ronda" id="ronda11"></div>
+         <div class="ronda" id="ronda12"></div>
+         <div class="ronda" id="ronda13"></div>
+         <div class="ronda" id="ronda14"></div>
+         <div class="ronda" id="ronda15"></div>
       </div>
    </div>
+   <div class="hide-bottom" id="hide-bottom">
+      <div class="bottom " id="bottom">
+         <div class="comodines">
+            <button class="boton50porciento" id="boton50porciento">½</button>
+            <button class="botonPublico" id="botonPublico">👥</button>
+            <button class="botonSaltar" id="botonSaltar">🔄</button>
+         </div>
+         <button class="confirmar" id="confirmar">CONFIRMAR</button>
+
+         <div class="pregunta" id="tituloPregunta"></div>
+         <div class="respuestas" id="respuestas">
+            <div class="respuesta" id="respuesta1"></div>
+            <div class="respuesta" id="respuesta2"></div>
+            <div class="respuesta" id="respuesta3"></div>
+            <div class="respuesta" id="respuesta4"></div>
+
+         </div>
+      </div>
+      <div class="barra" id="barra">
+         <div class="solucionBola" id="solucionBola"></div>
+      </div>
+   </div>
+
+
 
 
 
