--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
    <h3 class="puntuacion" id="puntuacion"></h3>
-   <button class="plantarse" id="botonPlantarse">Plantarse</button>
+
 
    <div class="solucion" id="solucion"></div>
    <h3 class="rondaActual" id="rondaActual"></h3>
@@ -47,7 +47,10 @@
             <button class="botonPublico" id="botonPublico">👥</button>
             <button class="botonSaltar" id="botonSaltar">🔄</button>
          </div>
-         <button class="confirmar" id="confirmar">CONFIRMAR</button>
+         <div class="flex-buttons"><button class="confirmar" id="confirmar">CONFIRMAR</button>
+            <button class="plantarse" id="botonPlantarse">Plantarse</button>
+         </div>
+
 
          <div class="pregunta" id="tituloPregunta"></div>
          <div class="respuestas" id="respuestas">
